# tachtalk

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  PROFILE_LED_PLAN.md  QUICKSTART.md  README.md  SECURITY_PLAN.md  TODO.md  WEBUI_GUIDE.md  WEBUI_MOCKUP.md  WIRING_GUIDE.md  rust-toolchain.toml  sdkconfig.defaults  setup.sh
.cargo/: config.toml
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: release.yml
captures/: analyze.py
examples/: mock_elm327.rs
reference/: esp-idf-hal  esp-idf-svc  esp-idf-sys  esp-idf-v5.3  test_elm327_emulation.py  test_elm327_with_obd_lib.py
src/: config.rs  dns.rs  leds.rs  main.rs  obd2.rs  sse_server.rs  watchdog.rs  web_server.rs
tachtalk-benchmark-client/: Cargo.toml
tachtalk-benchmark-client/src/: main.rs
tachtalk-capture-decode/: Cargo.toml  clippy.toml
tachtalk-capture-decode/src/: main.rs
tachtalk-capture-format/: Cargo.toml
tachtalk-capture-format/src/: lib.rs
tachtalk-elm327-lib/: Cargo.toml
tachtalk-elm327-lib/src/: lib.rs
tachtalk-firmware/: Cargo.toml  build.rs  clippy.toml  sdkconfig.defaults
tachtalk-firmware/.cargo/: config.toml
tachtalk-firmware/src/: auth.rs  config.rs  controls.rs  cpu_metrics.rs  cpu_stats.rs  dns.rs  error.rs  extra_bindings.h  heap_diag.rs  index.html  led_display.rs  leds.rs  main.rs  obd2.rs  ota.rs  rotary_encoder.rs  rpm_leds.rs  sse_server.rs  status_leds.rs  thread_util.rs  watchdog.rs  web_server.rs  wifi.rs
tachtalk-mock-elm327-server/: Cargo.toml
tachtalk-mock-elm327-server/src/: main.rs
tachtalk-shift-lights-lib/: Cargo.toml  clippy.toml
tachtalk-shift-lights-lib/src/: lib.rs
tachtalk-test-firmware/: Cargo.toml  LAYERED_QUERY_PLAN.md  build.rs  clippy.toml  espflash.toml  partitions.csv  sdkconfig.defaults
tachtalk-test-firmware/.cargo/: config.toml
tachtalk-test-firmware/src/: config.rs  cpu_metrics.rs  dns.rs  error.rs  index.html  main.rs  obd2.rs  ota.rs  sse_server.rs  status_leds.rs  thread_util.rs  web_server.rs  wifi.rs
