[workspace]
resolver = "2"
members = [
    "tachtalk-benchmark-client",
    "tachtalk-elm327-lib",
    "tachtalk-shift-lights-lib",
    "tachtalk-firmware",
    "tachtalk-mock-elm327-server",
]

[workspace.package]
version = "0.1.0"
authors = ["docwilco"]
edition = "2021"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
