[workspace]
resolver = "2"
members = [
    "tachtalk-benchmark-client",
    "tachtalk-capture-decode",
    "tachtalk-capture-format",
    "tachtalk-elm327-lib",
    "tachtalk-shift-lights-lib",
    "tachtalk-firmware",
    "tachtalk-mock-elm327-server",
    "tachtalk-test-firmware",
]

[workspace.package]
version = "0.1.0"
authors = ["docwilco"]
edition = "2021"
rust-version = "1.79"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4", features = ["derive"] }
embedded-svc = "0.28.1"
esp-idf-hal = "0.45.2"
esp-idf-svc = "0.51.0"
esp-idf-sys = "0.36.1"
log = { version = "0.4.29", default-features = false }
num-integer = "0.1"
oneshot = "0.1"
rgb = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
smallvec = { version = "1.13", features = ["serde", "union"] }
smart-leds = "0.4.0"
tachtalk-capture-format = { path = "tachtalk-capture-format" }
ws2812-esp32-rmt-driver = { version = "0.13.1", features = ["smart-leds-trait"] }

# Build dependencies
embuild = "0.33.1"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
