[workspace]
resolver = "2"
members = [
    "tachtalk-benchmark-client",
    "tachtalk-capture-decode",
    "tachtalk-capture-format",
    "tachtalk-elm327-lib",
    "tachtalk-shift-lights-lib",
    "tachtalk-firmware",
    "tachtalk-mock-elm327-server",
    "tachtalk-test-firmware",
]

[workspace.package]
version = "0.2.0"
authors = ["docwilco"]
edition = "2021"
rust-version = "1.79"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
deku = { version = "0.20.3", default-features = false, features = ["std"] }
derive_more = { version = "2", features = ["display", "error", "from"] }
embedded-svc = "0.28.1"
enumset = { version = "1", default-features = false }
esp-idf-hal = "0.45.2"
esp-idf-svc = "0.51.0"
esp-idf-sys = "0.36.1"
cookie = { version = "0.18", default-features = false }
hex = "0.4"
indexmap = "2"
log = { version = "0.4.29", default-features = false }
atomic_enum = "0.3"
num-integer = "0.1"
oneshot = { version = "0.2.1", features = ["std"] }
rgb = { version = "0.8.53", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
smallvec = { version = "2.0.0-alpha.12", features = ["serde", "std"] }
smart-leds = "0.4.0"
tachtalk-capture-format = { path = "tachtalk-capture-format" }
ws2812-esp32-rmt-driver = { version = "0.13.1", features = ["smart-leds-trait"] }

# Build dependencies
embuild = "0.33.1"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
