[package]
name = "tachtalk-firmware"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "tachtalk"
path = "src/main.rs"

[dependencies]
tachtalk-elm327-lib = { path = "../tachtalk-elm327-lib" }
tachtalk-shift-lights-lib = { path = "../tachtalk-shift-lights-lib" }
anyhow.workspace = true
embedded-svc.workspace = true
esp-idf-hal.workspace = true
esp-idf-svc.workspace = true
esp-idf-sys.workspace = true
log.workspace = true
oneshot.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
smart-leds.workspace = true
ws2812-esp32-rmt-driver.workspace = true

[build-dependencies]
embuild.workspace = true

# Add mDNS component from ESP-IDF component registry
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.8" }
