[package]
name = "tachtalk-firmware"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "tachtalk"
path = "src/main.rs"

[dependencies]
tachtalk-capture-format = { path = "../tachtalk-capture-format" }
tachtalk-elm327-lib = { path = "../tachtalk-elm327-lib" }
tachtalk-shift-lights-lib = { path = "../tachtalk-shift-lights-lib" }
derive_more.workspace = true
embedded-svc.workspace = true
enumset.workspace = true
esp-idf-hal.workspace = true
esp-idf-svc.workspace = true
esp-idf-sys.workspace = true
cookie.workspace = true
hex.workspace = true
indexmap.workspace = true
log.workspace = true
atomic_enum.workspace = true
oneshot.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
smart-leds.workspace = true
ws2812-esp32-rmt-driver.workspace = true

[build-dependencies]
embuild.workspace = true

# Add mDNS component from ESP-IDF component registry
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.8" }

# Generate Rust bindings for mbedTLS PKCS5 (PBKDF2 password hashing)
[[package.metadata.esp-idf-sys.extra_components]]
bindings_header = "src/extra_bindings.h"
